--- a/PartIII_EnergySystemDesign.ipynb
+++ b/PartIII_EnergySystemDesign.ipynb
@@ -237,7 +237,7 @@
     "<br/>\n",
     "Assumptions: \n",
     "<br/>    \n",
-    "The source side uses water as circulating fluid. Consider a temperature difference of 5 K between the water inlet-outlet in the GSHP condenser and 3 K for all other heat exchangers. Consider a GSHP compressor stop time of 10 minutes. The buffer tank is heated by 4 K during the heating peak load for 10 minutes\n",
+    "The source side uses water as circulating fluid. Consider a temperature difference of 5 K between the water inlet-outlet in the GSHP condenser and 3 K for all other heat exchangers. Consider a GSHP compressor stop time of 10 minutes. The buffer tank is heated by 4 K during the heating peak load for 10 minutes. Consider a COP of 4.9 for active heating of the GSHP. \n",
     "</div>"
    ]
   },
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assuming that the nominal COP of the GSHP is 4.9, compute the ground peak and monthly loads as well as the yearly imbalance load. Use the [Excel spreadsheet](loadCalc.xlsx) provided in the previous section.\n"
+    "Assuming that the nominal COP of the GSHP is 4.9, compute the ground peak and monthly loads as well as the yearly imbalance load. Use the [Excel spreadsheet](loadCalc.xlsx) provided in the previous section and complete the tab \"GROUND LOADS\". \n"
    ]
   },
   {
