--- a/PartII_StaticCalc.ipynb
+++ b/PartII_StaticCalc.ipynb
@@ -704,7 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the aid of the [Excel spreadsheet](loadCalc.xlsx) provided, calculate the building monthly and peak heating and cooling loads for the two buildings."
+    "With the aid of the [Excel spreadsheet](loadCalc.xlsx) provided, calculate the building monthly and peak heating and cooling loads for the two buildings. First, the tab \"DATA\" should be completed, after that complete the tab \"BUILDING LOADS\". As the GEOTABS system should be able to supply enough heating and cooling power all time, we consider the worst-case scenario in our building load calculation. \n"
    ]
   },
   {
